# temporary_test

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-app.yaml  release.yml
src/demo_package/: __init__.py  main.py
tests/: test_main.py
